--- a/src/Memory_Match.css
+++ b/src/Memory_Match.css
@@ -2,12 +2,17 @@ body {
     background: linear-gradient(135deg, #ff9a9e, #fad0c4);
     display: flex;
     justify-content: center;
+    width: 100%;
     align-items: center;
-    height: 100vh;
     margin: 0;
     font-family: 'Poppins', sans-serif;
     overflow: auto;
   }
+
+#root{
+  width: 100%;
+  height: 100vh;
+}
 
 
 .splash-screen {
@@ -16,7 +21,6 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    width: 100vw;
     background:
         /* Pineapple details */
         radial-gradient(circle closest-side at 50px 50px, var(--DarkYellow) 3px, transparent 0),
@@ -134,21 +138,24 @@ body {
   
   .grid-container {
     display: grid;
-    grid-template-columns: repeat(4, 110px);
-    gap: 20px;
+    grid-template-columns: repeat(4, minmax(50px, 1fr));
+    gap: 40px;
+    justify-items: center;
     margin-top: 20px;
-    perspective: 1200px;
+    width: 100%;
+    /* max-width: 800px; */
+    padding: 0 20px; /* Padding to avoid screen edge overflow */
+    box-sizing: border-box;
   }
   
   .card {
-    width: 110px;
-    height: 110px;
-    cursor: pointer;
+    aspect-ratio: 1 / 1;
+    width: 100%;
+    max-width: 160px;
     transition: transform 0.4s ease-in-out;
-    transform-style: preserve-3d;
     animation: popIn 0.5s ease-in-out;
   }
-  
+
   @keyframes popIn {
     from { transform: scale(0.8); opacity: 0; }
     to { transform: scale(1); opacity: 1; }
@@ -178,7 +185,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 56px;
+    font-size: 40px;
     font-weight: bold;
     border-radius: 14px;
     box-shadow: 5px 5px 12px rgba(0, 0, 0, 0.3);
@@ -192,6 +199,7 @@ body {
   .card-front {
     background: white;
     transform: rotateY(180deg);
+    transform-origin: center center;
   }
   
   .matched {
@@ -202,8 +210,8 @@ body {
   
   .clock-container {
     position: relative;
-    width: 19.2px;
-    height: 19.2px;
+    width: 10px;
+    height: 10px;
     margin-bottom: 15px;
     animation: pulse 1.5s infinite ease-in-out;
   }
@@ -317,7 +325,7 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
+    /* width: 100vw; */
     height: 100vh;
     pointer-events: none;
   }
